release/1.7.6/VERSION.md
# 1.7.6

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.7.6```   |
| Release Time   | ```2014-04-09T07:52:06+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.7.4```   |
| sha1   | ```545510a60f526b9aa8a38f9c0bc7a74235d21675```   |
| size   | ```59675```   |
| total size  | ```112252715```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/545510a60f526b9aa8a38f9c0bc7a74235d21675/1.7.4.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```6b2c5827994e17f904f0852f962dd6fccfbb8bdc```   |
| size   | ```5341288```   |
| url       | ```https://launcher.mojang.com/v1/objects/6b2c5827994e17f904f0852f962dd6fccfbb8bdc/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```41ea7757d4d7f74b95fc1ac20f919a8e521e910c```   |
| size   | ```9482170```   |
| url       | ```https://launcher.mojang.com/v1/objects/41ea7757d4d7f74b95fc1ac20f919a8e521e910c/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |