release/1.7.7/VERSION.md
# 1.7.7

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.7.7```   |
| Release Time   | ```2014-04-09T07:52:16+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.7.4```   |
| sha1   | ```545510a60f526b9aa8a38f9c0bc7a74235d21675```   |
| size   | ```59675```   |
| total size  | ```112252715```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/545510a60f526b9aa8a38f9c0bc7a74235d21675/1.7.4.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```e520f254a2b496d61839b816d712e238b1243f30```   |
| size   | ```5267555```   |
| url       | ```https://launcher.mojang.com/v1/objects/e520f254a2b496d61839b816d712e238b1243f30/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```a6ffc1624da980986c6cc12a1ddc79ab1b025c62```   |
| size   | ```9482631```   |
| url       | ```https://launcher.mojang.com/v1/objects/a6ffc1624da980986c6cc12a1ddc79ab1b025c62/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |